--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ProgrammingSpirit/Memories_project.git",
+  "homepage": "https://programmingspirit.github.io/Memories_project/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
